# panparser

./: CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_v0.3.0.md  RELEASE_v0.5.0.md  RELEASE_v0.5.1.md  RELEASE_v0.5.2.md  cli_parsed.json  folder_test_output.json  folder_unified_output.json  folder_with_images.json  mixed_files_result.json  nvidia_cli_result.json  nvidia_cli_result_final.json  nvidia_cli_result_fixed.json  pyproject.toml  test_cli_result.json
.github/workflows/: release.yml
examples/: README_Image_Extraction.md  ai_analysis_with_images_example.py  batch_pdf_processing_example.py  folder_parsing_example.py  pdf_image_extraction_example.py
src/panparsex/: __init__.py  ai_processor.py  cli.py  core.py  image_extractor.py  types.py
src/panparsex/parsers/: pdf.py  web_selenium.py
tests/: test_image_extraction.py
